fix: text overflow globally on nb-select

--- a/apps/gauzy/src/app/@theme/styles/gauzy/_gauzy-overrides.scss
+++ b/apps/gauzy/src/app/@theme/styles/gauzy/_gauzy-overrides.scss
@@ -103,6 +103,12 @@ $default-box-shadow: var(--gauzy-shadow);
   nb-select.appearance-outline.size-medium .select-button {
     border: none;
   }
+
+  nb-select button span {
+    display: block;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 /* 
